fixed footer issue on tablet devices

--- a/laab/src/footer.css
+++ b/laab/src/footer.css
@@ -122,7 +122,7 @@
   position: absolute;
   width: 450px;
   height: auto;
-  top: 5755px;
+  top: 6755px;
   left: 815px;
   margin-left: -80px;
   z-index: 10000;
